<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    android:layout_gravity="center"

    tools:context="com.example.theotherside.myappportfolio.MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="#4A148C"
        android:layout_marginBottom="30dp"
        android:text="@string/app_portfolio_title"/>

    <Button
        android:id="@+id/popular_movies_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="#00695C"
        android:layout_marginBottom="15dp"
        android:text="@string/popular_movies"/>
    <Button
        android:id="@+id/stock_hawk_button"
        android:layout_width="250dp"
        android:background="#00838F"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/stock_hawk"/>
    <Button
        android:id="@+id/build_it_bigger_button"
        android:layout_width="250dp"
        android:layout_marginBottom="15dp"
        android:background="#0277BD"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"/>
    <Button
        android:id="@+id/make_material_button"
        android:layout_width="250dp"
        android:background="#2E7D32"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content"
        android:text="@string/make_material"/>
    <Button
        android:id="@+id/go_ubiquitous_button"
        android:layout_width="250dp"
        android:layout_marginBottom="15dp"
        android:background="#558B2F"
        android:layout_height="wrap_content"
        android:text="@string/go_ubiquitous"/>
    <Button
        android:id="@+id/capstone_button"
        android:layout_width="250dp"
        android:layout_marginBottom="15dp"
        android:background="#EF6C00"
        android:layout_height="wrap_content"
        android:text="@string/capstone"/>

</LinearLayout>
